--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -82,11 +82,11 @@
                         android:padding="5dp"
                         app:strokeWidth="3dp"
                         android:layout_gravity="end"
-                        android:layout_marginRight="0dp"
+                        android:layout_marginRight="0dp"s
                         android:background="@color/bg"
                         android:scaleType="centerInside"
                         app:shapeAppearanceOverlay="@style/roundedImageView"
-                        android:src="@drawable/baseline_camera_alt_24"/>
+                        android:src="@drawable/baseline_edit_24"/>
                 </LinearLayout>
 
                 <!-- Username below Profile Icon -->
