--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -82,7 +82,7 @@
                         android:padding="5dp"
                         app:strokeWidth="3dp"
                         android:layout_gravity="end"
-                        android:layout_marginRight="0dp"s
+                        android:layout_marginRight="0dp"
                         android:background="@color/bg"
                         android:scaleType="centerInside"
                         app:shapeAppearanceOverlay="@style/roundedImageView"
