--- a/app/src/main/res/layout/coin_slot.xml
+++ b/app/src/main/res/layout/coin_slot.xml
@@ -13,7 +13,10 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center"
-        android:padding="5dp"
+        android:paddingLeft="4dp"
+        android:paddingTop="5dp"
+        android:paddingRight="4dp"
+        android:paddingBottom="4dp"
         android:layout_marginBottom="1dp">
         <TextView
             android:id="@+id/coin_icon"
@@ -33,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/righteous"
+            android:paddingRight="0dp"
             android:text="0000"
             android:inputType="number"
             android:textColor="@color/btn"
