--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -64,7 +64,7 @@
                     android:orientation="vertical">
                     <!-- Profile Icon -->
                     <com.google.android.material.imageview.ShapeableImageView
-                        android:id="@+id/circle_view"
+                        android:id="@+id/profilePic"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
                         android:layout_marginBottom="10dp"
